[tool.poetry]
name = "jp-klaviyo"
version = "0.1.0"
description = ""
authors = ["Navan Chauhan <navanchauhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
klaviyo = "^3.1.2"
streamlit = "^0.82.0"
watchdog = "^2.1.2"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
